--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title> Michael Gregoire - Resume</title>
+    <title> Michael Gregoire - Prime Academy Resume Application Submission</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
+  
+  
   <body>
-    <p>Resume Test</p>
+    <div id="container">
+      <div id="contact-info">
+        <h1>Michael Gregoire</h1>
+        <h2>6037 Portland Ave</h2>
+        <h2>Minneapolis, MN 55417</h2>
+        <h2>952-210-1000</h2>
+        <h2>mdgregoire@gmail.com</h2>
   </body>
 </html>
