--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   
   <body>
     <div id="container">
-      <div id="contact-info">
+      
+      <div id="name">
         <h1>Michael Gregoire</h1>
+      </div>
+      
+      <div id="contact-info">
         <h2>6037 Portland Ave</h2>
         <h2>Minneapolis, MN 55417</h2>
         <h2>952-210-1000</h2>
