--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>6037 Portland Ave</h2>
         <h2>Minneapolis, MN 55417</h2>
         <h2>952-210-1000</h2>
-        <h2>mdgregoire@gmail.com</h2>
+        <a href="mailto:mdgregoire@gmail.com"><h2 id="email">mdgregoire@gmail.com</h2></a>
       </div>
             
       <div id="about-me">
