--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
         </div>
       </div> 
       
-      <div id="education"> Education
-        <h3>Bachelor of Science degree in Culinary Management - The International Culinary School at The Art Institutes</h3>
+      <div id="education"> 
+        <h3>Education</h3>
+        <h2>Bachelor of Science degree in Culinary Management - The International Culinary School at The Art Institutes</h3>
         <p>June 2012</p>
       </div>
       
