--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
       <div id="about-me">
         <h3>About Me</h3>
-        <p>I am a highly motivated culinary professional looking for the next challenge in life.  Throughout my years of hospitality expirence I have learned to embrace the challenges that arise as a result of putting the customers needs first.  I enjoy working with a team to accomplish a goal that individually no one could accomplish. </p>
+        <p>I am a highly motivated culinary professional looking for the next challenge in life.  Throughout my years of hospitality expirence I have learned to embrace the challenges that arise as a result of putting the customers needs first.  I enjoy working with and developing a team to accomplish goals that would be impossible for an individual.</p>
       </div>
       
       <div id="work-history"> Work History
